--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
       </nav>
       <button type="button">Order Now</button>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Enjoy Your Favorite Food From Anywhere</h1>
+        <p>
+          With just a few clicks, you can have your favorite meals delivered
+          straight to your doorstep, no matter where you are. Order now and
+          enjoy a hassle-free and delicious meal from the comfort of your own
+          home.
+        </p>
+        <button type="button">Order Now</button>
+        <img src="./images/food.png" alt="salad" width="528" height="528" />
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
