--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       /></a>
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="">Service</a></li>
           <li><a href="">Menu</a></li>
           <li><a href="">Contact</a></li>
@@ -23,7 +23,7 @@
       <button type="button">Order Now</button>
     </header>
     <main>
-      <section>
+      <section id="hero">
         <h1>Enjoy Your Favorite Food From Anywhere</h1>
         <p>
           With just a few clicks, you can have your favorite meals delivered
@@ -33,6 +33,29 @@
         </p>
         <button type="button">Order Now</button>
         <img src="./images/food.png" alt="salad" width="528" height="528" />
+      </section>
+      <section id="about">
+        <img src="./images/aple.png" alt="aple" width="396" height="502" />
+        <h2>What’s Special About Our Offerings</h2>
+        <p>
+          With our platform, you can browse through a diverse selection of
+          cuisines and local restaurants, and choose from a variety of dishes
+          that cater to your specific taste buds.
+        </p>
+        <ul>
+          <li>
+            <h3>Fasest Delivery</h3>
+            <p>
+              Our advanced logistics system and dedicated delivery partners
+              ensure that your meals are delivered to you within 30-minutes.
+            </p>
+          </li>
+          <li>
+            <h3>Easy To Order</h3>
+            <p>You can browse through a wide variety of cuisines and restaurants, select your favorite meals, and place your order in just a few clicks.</p>
+          </li>
+        </ul>
+        <button type="button">Order Now</button>
       </section>
     </main>
     <footer></footer>
