Add Favorites markup

--- a/index.html
+++ b/index.html
@@ -52,10 +52,68 @@
           </li>
           <li>
             <h3>Easy To Order</h3>
-            <p>You can browse through a wide variety of cuisines and restaurants, select your favorite meals, and place your order in just a few clicks.</p>
+            <p>
+              You can browse through a wide variety of cuisines and restaurants,
+              select your favorite meals, and place your order in just a few
+              clicks.
+            </p>
           </li>
         </ul>
         <button type="button">Order Now</button>
+      </section>
+      <section>
+        <h2>Some of Our Favorites</h2>
+        <p>Looking for something delicious?</p>
+        <ul>
+          <li>
+            <img
+              src="./images/gamburger.png"
+              alt="gamburger"
+              width="315"
+              height="315"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/pasta.png"
+              alt="pasta"
+              width="315"
+              height="315"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/pizza.png"
+              alt="pizza"
+              width="315"
+              height="315"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/chicken.png"
+              alt="chicken"
+              width="315"
+              height="315"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/salat.png"
+              alt="salat"
+              width="315"
+              height="315"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/borshch.png"
+              alt="borshch"
+              width="315"
+              height="315"
+            />
+          </li>
+        </ul>
       </section>
     </main>
     <footer></footer>
