--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="./images/food.png" alt="salad" width="528" height="528" />
       </section>
       <section id="about">
-        <img src="./images/aple.png" alt="aple" width="396" height="502" />
+        <img src="./images/aple.png" alt="apple" width="396" height="502" />
         <h2>What’s Special About Our Offerings</h2>
         <p>
           With our platform, you can browse through a diverse selection of
