add subscribe markup

--- a/index.html
+++ b/index.html
@@ -117,29 +117,56 @@
       </section>
       <section>
         <h2>What our Customers Say</h2>
-        <p>Don't just take our word for it - see what our satisfied customers have to say
-
+        <p>
+          Don't just take our word for it - see what our satisfied customers
+          have to say
         </p>
         <ul>
           <li>
-            <img src="./images/stars.svg" alt="stars" width="101" height="16">
-            <p>“The Best app I have used to order food in a while, so many options to choose from too, I would recommend to a freind, No questions asked”
-
+            <img src="./images/stars.svg" alt="stars" width="101" height="16" />
+            <p>
+              “The Best app I have used to order food in a while, so many
+              options to choose from too, I would recommend to a freind, No
+              questions asked”
             </p>
-            <img src="./images/person1.png" alt="person" width="48" height="48">
+            <img
+              src="./images/person1.png"
+              alt="person"
+              width="48"
+              height="48"
+            />
             <h3>Sumith Shah</h3>
             <p>Some Dude</p>
           </li>
-<li>
-            <img src="./images/stars.svg" alt="stars" width="101" height="16">
-            <p>““The ease with which I can just go in and order what i want was amazing, It has been a very pleasant experience ordering from this app””
-
+          <li>
+            <img src="./images/stars.svg" alt="stars" width="101" height="16" />
+            <p>
+              “The ease with which I can just go in and order what i want was
+              amazing, It has been a very pleasant experience ordering from this
+              app”
             </p>
-            <img src="./images/person2.png" alt="person" width="48" height="48">
+            <img
+              src="./images/person2.png"
+              alt="person"
+              width="48"
+              height="48"
+            />
             <h3>Sumith Shah</h3>
             <p>Some Dude</p>
           </li>
         </ul>
+      </section>
+      <section>
+        <h2>Subscribe To Get Special Offers</h2>
+        <p>
+          Order now and receive 10% off your first meal with Enjoy Your Favorite
+          Food From Anywhere.
+        </p>
+        <form>
+          <label><input type="email" placeholder="Enter your email" /></label
+          ><button type="submit">Subscribe</button>
+        </form>
+        <img src="./images/banan.png" alt="banan" width="608" height="266" />
       </section>
     </main>
     <footer></footer>
