--- a/index.html
+++ b/index.html
@@ -169,6 +169,32 @@
         <img src="./images/banan.png" alt="banan" width="608" height="266" />
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/logo.svg" alt="foodsta logo" width="66" height="52"
+      /></a>
+      <nav>
+        <ul>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Menu</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+        <li><a href="">Cookies Settings</a></li>
+      </ul>
+      <h3>Subscribe</h3>
+      <label><input type="email" placeholder="Enter your email" /></label
+      ><button type="submit">Subscribe</button>
+      <p>
+        Subscribe By subscribing you agree to with our
+        <span><a href="">Privacy Policy</a></span>
+      </p>
+      <p>2022 FoodSta. All right reserved.</p>
+    </footer>
   </body>
 </html>
