Add header styles

--- a/index.html
+++ b/index.html
@@ -3,24 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>food delivery</title>
   </head>
 
   <body>
     <header>
-      <a href="./index.html"
+      <div class="container header-container">
+      <a class="header-logo" href="./index.html"
         ><img src="./images/logo.svg" alt="foodsta logo" width="66" height="52"
       /></a>
-      <nav>
-        <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="">Service</a></li>
-          <li><a href="">Menu</a></li>
-          <li><a href="">Contact</a></li>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li><a class="header-nav-link" href="#hero">Home</a></li>
+          <li><a class="header-nav-link" href="#about">About</a></li>
+          <li><a class="header-nav-link" href="">Service</a></li>
+          <li><a class="header-nav-link" href="">Menu</a></li>
+          <li><a class="header-nav-link" href="">Contact</a></li>
         </ul>
       </nav>
-      <button type="button">Order Now</button>
+      <button class="header-button" type="button">Order Now</button>
+      </div>
     </header>
     <main>
       <section id="hero">
@@ -198,3 +205,5 @@
     </footer>
   </body>
 </html>
+
+
