--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
       </div>
     </header>
     <main>
-      <section id="hero">
-        <h1>Enjoy Your Favorite Food From Anywhere</h1>
-        <p>
-          With just a few clicks, you can have your favorite meals delivered
-          straight to your doorstep, no matter where you are. Order now and
-          enjoy a hassle-free and delicious meal from the comfort of your own
-          home.
-        </p>
-        <button type="button">Order Now</button>
-        <img src="./images/food.png" alt="salad" width="528" height="528" />
+      <section class="hero" id="hero">
+        <div class="container hero-container">
+          <div class="hero-wrap">
+          <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
+            <p class="hero-text">
+              With just a few clicks, you can have your favorite meals delivered
+              straight to your doorstep, no matter where you are. Order now and
+              enjoy a hassle-free and delicious meal from the comfort of your own
+              home.
+            </p>
+            <button class="hero-btn" type="button">Order Now</button>
+          </div>
+          <img class="hero-img" src="./images/food.png" alt="salad" width="528" height="528" />
+        </div>
       </section>
       <section id="about">
         <img src="./images/aple.png" alt="apple" width="396" height="502" />
