--- a/index.html
+++ b/index.html
@@ -45,32 +45,36 @@
           <img class="hero-img" src="./images/food.png" alt="salad" width="528" height="528" />
         </div>
       </section>
-      <section id="about">
+      <section  class="about">
+        <div class="container about-container">
         <img src="./images/aple.png" alt="apple" width="396" height="502" />
-        <h2>What’s Special About Our Offerings</h2>
-        <p>
+        <div>
+        <h2 class="about-title">What’s Special About Our Offerings</h2>
+        <p class="about-desc">
           With our platform, you can browse through a diverse selection of
           cuisines and local restaurants, and choose from a variety of dishes
           that cater to your specific taste buds.
         </p>
-        <ul>
-          <li>
-            <h3>Fasest Delivery</h3>
-            <p>
+        <ul class="about-list">
+          <li class="about-item">
+            <h3 class="about-list-title">Fasest Delivery</h3>
+            <p class="about-list-text">
               Our advanced logistics system and dedicated delivery partners
               ensure that your meals are delivered to you within 30-minutes.
             </p>
           </li>
-          <li>
-            <h3>Easy To Order</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-list-title">Easy To Order</h3>
+            <p class="about-list-text">
               You can browse through a wide variety of cuisines and restaurants,
               select your favorite meals, and place your order in just a few
               clicks.
             </p>
           </li>
         </ul>
-        <button type="button">Order Now</button>
+        <button class="about-btn" type="button">Order Now</button>
+        </div>
+        </div>
       </section>
       <section>
         <h2>Some of Our Favorites</h2>
