--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
         </div>
         </div>
       </section>
-      <section>
-        <h2>Some of Our Favorites</h2>
-        <p>Looking for something delicious?</p>
-        <ul>
-          <li>
+      <section class="favorites">
+         <div class="container favorites-container">
+        <h2 class="favorites-title">Some of Our Favorites</h2>
+        <p class="favorites-text">Looking for something delicious?</p>
+        <div class="container favorites-list-container">
+        <ul class="favorites-list">
+          <li class="favorites-item">
             <img
               src="./images/gamburger.png"
               alt="gamburger"
@@ -128,16 +130,19 @@
               height="315"
             />
           </li>
+          </div>
         </ul>
+        </div>
       </section>
-      <section>
-        <h2>What our Customers Say</h2>
-        <p>
+      <section class="say">
+        <div class="container say-container">
+        <h2 class="say-title">What our Customers Say</h2>
+        <p class="say-text">
           Don't just take our word for it - see what our satisfied customers
           have to say
         </p>
-        <ul>
-          <li>
+        <ul class="say-list">
+          <li class="say-item">
             <img src="./images/stars.svg" alt="stars" width="101" height="16" />
             <p>
               “The Best app I have used to order food in a while, so many
@@ -153,7 +158,7 @@
             <h3>Sumith Shah</h3>
             <p>Some Dude</p>
           </li>
-          <li>
+          <li class="say-item">
             <img src="./images/stars.svg" alt="stars" width="101" height="16" />
             <p>
               “The ease with which I can just go in and order what i want was
@@ -170,6 +175,7 @@
             <p>Some Dude</p>
           </li>
         </ul>
+        </div>
       </section>
       <section>
         <h2>Subscribe To Get Special Offers</h2>
