--- a/index.html
+++ b/index.html
@@ -217,6 +217,24 @@
       </p>
       <p>2022 FoodSta. All right reserved.</p>
     </footer>
+
+    <div class="wrapper">
+      <img src="./images/support-img.svg" alt="computer" width="540" height="500" >
+    <div>
+
+      <p>Easier decision making for</p>
+      <h2>Customer Support</h2>
+      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+
+      </p>
+
+      <ul>
+        <li class="wrapper-item">Never worry about overpaying for your energy again. </li>
+        <li class="wrapper-item">We will only switch you to energy companies that we trust and will treat you right</li>
+        <li class="wrapper-item">We track the markets daily and know where the savings are.</li>
+      </ul>
+    </div>
+    </div>
   </body>
 </html>
 
