--- a/index.html
+++ b/index.html
@@ -3,178 +3,211 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Kalam&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>food delivery</title>
   </head>
 
   <body>
     <header>
       <div class="container header-container">
-      <a class="header-logo" href="./index.html"
-        ><img src="./images/logo.svg" alt="foodsta logo" width="66" height="52"
-      /></a>
-      <nav class="header-nav">
-        <ul class="header-nav-list">
-          <li><a class="header-nav-link" href="#hero">Home</a></li>
-          <li><a class="header-nav-link" href="#about">About</a></li>
-          <li><a class="header-nav-link" href="">Service</a></li>
-          <li><a class="header-nav-link" href="">Menu</a></li>
-          <li><a class="header-nav-link" href="">Contact</a></li>
-        </ul>
-      </nav>
-      <button class="header-button" type="button">Order Now</button>
+        <a class="header-logo" href="./index.html"
+          ><img
+            src="./images/logo.svg"
+            alt="foodsta logo"
+            width="66"
+            height="52"
+        /></a>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li><a class="header-nav-link" href="#hero">Home</a></li>
+            <li><a class="header-nav-link" href="#about">About</a></li>
+            <li><a class="header-nav-link" href="">Service</a></li>
+            <li><a class="header-nav-link" href="">Menu</a></li>
+            <li><a class="header-nav-link" href="">Contact</a></li>
+          </ul>
+        </nav>
+        <button class="header-button" type="button">Order Now</button>
       </div>
     </header>
     <main>
       <section class="hero" id="hero">
         <div class="container hero-container">
           <div class="hero-wrap">
-          <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
+            <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
             <p class="hero-text">
               With just a few clicks, you can have your favorite meals delivered
               straight to your doorstep, no matter where you are. Order now and
-              enjoy a hassle-free and delicious meal from the comfort of your own
-              home.
+              enjoy a hassle-free and delicious meal from the comfort of your
+              own home.
             </p>
             <button class="hero-btn" type="button">Order Now</button>
           </div>
-          <img class="hero-img" src="./images/food.png" alt="salad" width="528" height="528" />
+          <img
+            class="hero-img"
+            src="./images/food.png"
+            alt="salad"
+            width="528"
+            height="528"
+          />
         </div>
       </section>
-      <section  class="about">
+      <section class="about">
         <div class="container about-container">
-        <img src="./images/aple.png" alt="apple" width="396" height="502" />
-        <div>
-        <h2 class="about-title">What’s Special About Our Offerings</h2>
-        <p class="about-desc">
-          With our platform, you can browse through a diverse selection of
-          cuisines and local restaurants, and choose from a variety of dishes
-          that cater to your specific taste buds.
-        </p>
-        <ul class="about-list">
-          <li class="about-item">
-            <h3 class="about-list-title">Fasest Delivery</h3>
-            <p class="about-list-text">
-              Our advanced logistics system and dedicated delivery partners
-              ensure that your meals are delivered to you within 30-minutes.
+          <img src="./images/aple.png" alt="apple" width="396" height="502" />
+          <div>
+            <h2 class="about-title">What’s Special About Our Offerings</h2>
+            <p class="about-desc">
+              With our platform, you can browse through a diverse selection of
+              cuisines and local restaurants, and choose from a variety of
+              dishes that cater to your specific taste buds.
             </p>
-          </li>
-          <li class="about-item">
-            <h3 class="about-list-title">Easy To Order</h3>
-            <p class="about-list-text">
-              You can browse through a wide variety of cuisines and restaurants,
-              select your favorite meals, and place your order in just a few
-              clicks.
-            </p>
-          </li>
-        </ul>
-        <button class="about-btn" type="button">Order Now</button>
-        </div>
+            <ul class="about-list">
+              <li class="about-item">
+                <h3 class="about-list-title">Fasest Delivery</h3>
+                <p class="about-list-text">
+                  Our advanced logistics system and dedicated delivery partners
+                  ensure that your meals are delivered to you within 30-minutes.
+                </p>
+              </li>
+              <li class="about-item">
+                <h3 class="about-list-title">Easy To Order</h3>
+                <p class="about-list-text">
+                  You can browse through a wide variety of cuisines and
+                  restaurants, select your favorite meals, and place your order
+                  in just a few clicks.
+                </p>
+              </li>
+            </ul>
+            <button class="about-btn" type="button">Order Now</button>
+          </div>
         </div>
       </section>
       <section class="favorites">
-         <div class="container favorites-container">
-        <h2 class="favorites-title">Some of Our Favorites</h2>
-        <p class="favorites-text">Looking for something delicious?</p>
-        <div class="container favorites-list-container">
-        <ul class="favorites-list">
-          <li class="favorites-item">
-            <img
-              src="./images/gamburger.png"
-              alt="gamburger"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/pasta.png"
-              alt="pasta"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/pizza.png"
-              alt="pizza"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/chicken.png"
-              alt="chicken"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/salat.png"
-              alt="salat"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/borshch.png"
-              alt="borshch"
-              width="315"
-              height="315"
-            />
-          </li>
+        <div class="container favorites-container">
+          <h2 class="favorites-title">Some of Our Favorites</h2>
+          <p class="favorites-text">Looking for something delicious?</p>
+          <div class="container favorites-list-container">
+            <ul class="favorites-list">
+              <li class="favorites-item">
+                <img
+                  src="./images/gamburger.png"
+                  alt="gamburger"
+                  width="315"
+                  height="315"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/pasta.png"
+                  alt="pasta"
+                  width="315"
+                  height="315"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/pizza.png"
+                  alt="pizza"
+                  width="315"
+                  height="315"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/chicken.png"
+                  alt="chicken"
+                  width="315"
+                  height="315"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/salat.png"
+                  alt="salat"
+                  width="315"
+                  height="315"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/borshch.png"
+                  alt="borshch"
+                  width="315"
+                  height="315"
+                />
+              </li>
+            </ul>
           </div>
-        </ul>
         </div>
       </section>
       <section class="say">
         <div class="container say-container">
-        <h2 class="say-title">What our Customers Say</h2>
-        <p class="say-text">
-          Don't just take our word for it - see what our satisfied customers
-          have to say
-        </p>
-        <ul class="say-list">
-          <li class="say-item">
-            <img src="./images/stars.svg" alt="stars" width="101" height="16" />
-            <p>
-              “The Best app I have used to order food in a while, so many
-              options to choose from too, I would recommend to a freind, No
-              questions asked”
-            </p>
-            <img
-              src="./images/person1.png"
-              alt="person"
-              width="48"
-              height="48"
-            />
-            <h3>Sumith Shah</h3>
-            <p>Some Dude</p>
-          </li>
-          <li class="say-item">
-            <img src="./images/stars.svg" alt="stars" width="101" height="16" />
-            <p>
-              “The ease with which I can just go in and order what i want was
-              amazing, It has been a very pleasant experience ordering from this
-              app”
-            </p>
-            <img
-              src="./images/person2.png"
-              alt="person"
-              width="48"
-              height="48"
-            />
-            <h3>Sumith Shah</h3>
-            <p>Some Dude</p>
-          </li>
-        </ul>
+          <h2 class="say-title">What our Customers Say</h2>
+          <p class="say-text">
+            Don't just take our word for it - see what our satisfied customers
+            have to say
+          </p>
+          <ul class="say-list">
+            <li class="say-item">
+              <img
+                src="./images/stars.svg"
+                alt="stars"
+                width="101"
+                height="16"
+              />
+              <p>
+                “The Best app I have used to order food in a while, so many
+                options to choose from too, I would recommend to a freind, No
+                questions asked”
+              </p>
+              <img
+                src="./images/person1.png"
+                alt="person"
+                width="48"
+                height="48"
+              />
+              <h3>Sumith Shah</h3>
+              <p>Some Dude</p>
+            </li>
+            <li class="say-item">
+              <img
+                src="./images/stars.svg"
+                alt="stars"
+                width="101"
+                height="16"
+              />
+              <p>
+                “The ease with which I can just go in and order what i want was
+                amazing, It has been a very pleasant experience ordering from
+                this app”
+              </p>
+              <img
+                src="./images/person2.png"
+                alt="person"
+                width="48"
+                height="48"
+              />
+              <h3>Sumith Shah</h3>
+              <p>Some Dude</p>
+            </li>
+          </ul>
         </div>
       </section>
       <section>
@@ -219,24 +252,96 @@
     </footer>
 
     <div class="wrapper">
-      <img src="./images/support-img.svg" alt="computer" width="540" height="500" >
-    <div>
+      <img
+        src="./images/support-img.svg"
+        alt="computer"
+        width="540"
+        height="500"
+      />
+      <div>
+        <p>Easier decision making for</p>
+        <h2>Customer Support</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
 
-      <p>Easier decision making for</p>
-      <h2>Customer Support</h2>
-      <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
-
-      </p>
-
-      <ul>
-        <li class="wrapper-item">Never worry about overpaying for your energy again. </li>
-        <li class="wrapper-item">We will only switch you to energy companies that we trust and will treat you right</li>
-        <li class="wrapper-item">We track the markets daily and know where the savings are.</li>
-      </ul>
+        <ul>
+          <li class="wrapper-item">
+            Never worry about overpaying for your energy again.
+          </li>
+          <li class="wrapper-item">
+            We will only switch you to energy companies that we trust and will
+            treat you right
+          </li>
+          <li class="wrapper-item">
+            We track the markets daily and know where the savings are.
+          </li>
+        </ul>
+      </div>
     </div>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img src="./images/1.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Increasing Prosperity With Positive Thinking</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/2.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Motivation Is The First Step To Success</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/3.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Success Steps For Your Personal Or Business</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/1.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Increasing Prosperity With Positive Thinking</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/2.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Motivation Is The First Step To Success</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/3.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Success Steps For Your Personal Or Business</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/1.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Increasing Prosperity With Positive Thinking</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/2.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Motivation Is The First Step To Success</h3>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/3.jpg" alt="laptop" width="350" height="185" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Success Steps For Your Personal Or Business</h3>
+        </div>
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+
+      <!-- If we need navigation buttons -->
+      <!-- <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div> -->
+
+      <!-- If we need scrollbar -->
+
     </div>
-    <h1>HH</h1>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
-
-
