--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
       <!-- If we need scrollbar -->
 
     </div>
+
+   <div>
+    <div class="container">
+    <div class="box">
+      <img class="box-img" src="./images/IMAGE.jpg" alt="man" width="525" height="620">
+    </div>
+    <h2 class="box-title">About the Author</h2>
+
+   </div>
+   </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/slider.js"></script>
   </body>
