--- a/index.html
+++ b/index.html
@@ -349,26 +349,28 @@
     <div class="box">
       <img class="box-img" src="./images/IMAGE.jpg" alt="man" width="525" height="620">
     </div>
-    <div class="box-two">
-      <h2 class="box-title">About the Author</h2>
-      <p class="box-text">
-        We believe that bookstores are essential to a healthy culture. They’re where authors can connect with readers, where we discover new writers, where children get hooked on the thrill of reading that can last a lifetime.
-      </p>
-    </div>
-    <div class="box-numer">
-      <div class="box-cart">
-        <p class="numer">02</p>
-        <p class="numer-text">Books Published</p>
+   <div class="box-general">
+      <!-- <div class="box-two"> -->
+        <h2 class="box-title">About the Author</h2>
+        <p class="box-text">
+          We believe that bookstores are essential to a healthy culture. They’re where authors can connect with readers, where we discover new writers, where children get hooked on the thrill of reading that can last a lifetime.
+        </p>
+      <!-- </div> -->
+      <div class="box-numer">
+        <div class="box-cart">
+          <p class="numer">02</p>
+          <p class="numer-text">Books Published</p>
+        </div>
+        <div class="box-cart">
+          <p class="numer">4.5</p>
+          <p class="numer-text">User Reviews</p>
+        </div>
+        <div class="box-cart">
+          <p class="numer">0.4</p>
+          <p class="numer-text">Best Seller Awards</p>
+        </div>
       </div>
-      <div class="box-cart">
-        <p class="numer">4.5</p>
-        <p class="numer-text">User Reviews</p>
-      </div>
-      <div class="box-cart">
-        <p class="numer">0.4</p>
-        <p class="numer-text">Best Seller Awards</p>
-      </div>
-    </div>
+   </div>
 
    </div>
    </div>
